--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,22 +3,10 @@
     <span class="f-left">  
       <a href="{{ site.baseurl }}/">
         <h1>
-          <span>mono</span>chrome
+          jjarzynski<span>.dev</span>
         </h1>
       </a>
-    </span>
-    <span id="nav-links" class="absolute right bottom">
-      <!-- Nav pages -->
-	    {% for page in site.pages %}
-	      {% if page.layout == "page" %}
-	        <a href="{% if site.baseurl == "/" %}{{ page.url }}{% else %}{{ page.url | prepend: site.baseurl }}{% endif %}" title="{{ page.title }}">{{ page.title }}</a>
-	      {% endif %}
-	    {% endfor %}
-      
-      <!-- Nav links -->
-	    {% include link.html %}
-
-    </span>
+    </span
   </div>
 </header>
 
