--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -10,9 +10,9 @@
 	  {% endfor %}
     
     <!-- Nav links -->
-	  {% include link.html %}
+<!-- 	  {% include link.html %}
 
-	</div>
+	</div> -->
   
   <!-- Nav footer -->
 	{% if site.custom_nav_footer == true %}
