--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -24,7 +24,7 @@ body {
 
 $background-color: #FFFFFF;
 $text-color: #333333;
-$text-light-color: rgba(0,0,0,0.6);
+$text-light-color: #3f3f3f;
 $text-dark-color: #000000;
 
 /*- Base settings -*/
