--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -1,6 +1,8 @@
 .highlight code, .highlight pre {
 color:#fdce93;
 background-color:#3f3f3f;
+display: block;
+padding: 10px;
 }
 
 .highlight .hll {
